feat(variables): add checkbox for undefined variables in filter dialog
Related to: CAM-3058

--- a/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form-variable.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form-variable.html
@@ -7,7 +7,19 @@
     {{ 'FILTER_VARIABLES_AMOUNT_WARNING' | translate }}
   </div>
 
+
   <div class="row labels-left">
+    <div class="col-xs-12">
+      <div class="undefined-variable checkbox">
+        <label>
+          <input type="checkbox"
+                 class="form-control"
+                 ng-model="filter.properties.showUndefinedVariable" />
+          {{ 'FILTER_FORM_VARIABLES_SHOW_UNDEFINED' | translate }}
+        </label>
+      </div>
+    </div>
+
     <div class="col-xs-2 row-action" ng-show="!filter.id || (filter.id && accesses.update)">
       <a ng-click="addVariable()"
          href>
