--- a/client/client/scripts/variable/directives/cam-tasklist-variables.html
+++ b/client/client/scripts/variable/directives/cam-tasklist-variables.html
@@ -5,7 +5,7 @@
       translate="TASK_VARIABLES">Variables</h6> -->
 
   <div ng-repeat="(delta, info) in variableDefinitions"
-       ng-if="variablesByName[info.name]">
+       ng-if="variablesByName[info.name] || filterProperties.showUndefinedVariable">
     <div class="col-xs-12 col-lg-6">
 
       <div class="row variable-item">
@@ -13,14 +13,25 @@
               ng-click="selectValue($event)"> -->
         <span class="col-xs-4 col-lg-12">
           <strong class="variable-label"
+                  ng-class="{'undefined' : !variablesByName[info.name] && filterProperties.showUndefinedVariable}"
                   tooltip-placement="top"
                   tooltip="{{ info.name }}">
             {{ info.label }}:
           </strong>
         </span>
 
+
         <span class="col-xs-8 col-lg-12"
-              ng-if="variablesByName[info.name].value !== null || variablesByName[info.name].type === 'Bytes'"
+              ng-if="!variablesByName[info.name] && filterProperties.showUndefinedVariable">
+          <span class="variable-value undefined"
+                translate="UNDEFINED_VARIABLE">
+            &lt;Undefined&gt;
+          </span>
+        </span>
+
+
+        <span class="col-xs-8 col-lg-12"
+              ng-if="(variablesByName[info.name] && variablesByName[info.name].value !== null) || variablesByName[info.name].type === 'Bytes'"
               ng-switch="variablesByName[info.name].type">
           <span class="variable-value"
                 ng-switch-when="Date"
