impr(external form): make a call-for-action button to open the form
Related to: CAM-3064

--- a/client/client/scripts/form/directives/cam-tasklist-form-external.html
+++ b/client/client/scripts/form/directives/cam-tasklist-form-external.html
@@ -3,7 +3,8 @@
   {{ EXTERNAL_FORM_NOTE | translate }}
 </div>
 
-<a ng-href="{{ externalFormUrl  }}">
+<a ng-href="{{ externalFormUrl  }}"
+   class="external-form">
   {{ 'EXTERNAL_FORM_LINK' |translate }}
   <i class="glyphicon glyphicon-folder-open"></i>
 </a>
