chore(clean-up): remove dead code

--- a/client/client/scripts/navigation/directives/cam-tasklist-navigation.html
+++ b/client/client/scripts/navigation/directives/cam-tasklist-navigation.html
@@ -63,7 +63,7 @@
         <ul class="dropdown-menu">
           <li class="user-profile">
             <a sem-jump-to-profile
-               ng-href="{{ 'adminbase://:engine' | uri }}/#/users/{{ username }}?tab=profile"
+               ng-href="{{ 'adminbase://:engine' | uri }}/#/users/{{ authentication.name }}?tab=profile"
                translate="MY_PROFILE">
               My Profile
             </a>
