impr(task list): change the style of assignee
And add a tooltip on the name in order to be able to read more or all of
the name.

Related to: CAM-3075

--- a/client/client/scripts/tasklist/directives/cam-tasklist-tasks.html
+++ b/client/client/scripts/tasklist/directives/cam-tasklist-tasks.html
@@ -101,7 +101,10 @@
                 <span tooltip-placement="top"
                       tooltip="{{ 'ASSIGNEE' | translate }}"
                       class="glyphicon glyphicon-user"></span>
-                {{ task.assignee }}
+                <span tooltip-placement="top"
+                      tooltip="{{ task.assignee }}">
+                  {{ task.assignee }}
+                </span>
               </li>
             </ul>
           </div>
