fix(groups/update): trigger update event on groups dialog cloase
related to CAM-3078

--- a/client/client/scripts/task/modals/cam-tasklist-groups-modal.html
+++ b/client/client/scripts/task/modals/cam-tasklist-groups-modal.html
@@ -75,7 +75,7 @@
     <div class="col-xs-12">
       <button class="btn btn-xs btn-link"
               type="button"
-              ng-click="close()"
+              ng-click="$dismiss()"
               translate="CLOSE">Close</button>
     </div>
   </div>
