--- a/client/client/scripts/filter/modals/cam-tasklist-filter-modal.html
+++ b/client/client/scripts/filter/modals/cam-tasklist-filter-modal.html
@@ -53,26 +53,28 @@
     </div>
 
     <div class="col-xs-8">
-      <div class="col-xs-12">
+      <div class="row">
+        <div class="col-xs-12">
 
-        <button class="btn btn-xs btn-link"
-                type="button"
-                ng-click="$dismiss()"
-                translate="CLOSE">Close</button>
+          <button class="btn btn-xs btn-link"
+                  type="button"
+                  ng-click="$dismiss()"
+                  translate="CLOSE">Close</button>
 
-        <button ng-if="!deletion && (!filter.id || (filter.id && accesses.update))"
-                class="btn btn-primary"
-                type="submit"
-                ng-disabled="!isValid()"
-                ng-click="submit()"
-                translate="SAVE">Save</button>
+          <button ng-if="!deletion && (!filter.id || (filter.id && accesses.update))"
+                  class="btn btn-primary"
+                  type="submit"
+                  ng-disabled="!isValid()"
+                  ng-click="submit()"
+                  translate="SAVE">Save</button>
 
 
-        <button ng-if="deletion"
-                class="btn btn-primary"
-                type="submit"
-                ng-click="delete()"
-                translate="DELETE">Delete</button>
+          <button ng-if="deletion"
+                  class="btn btn-primary"
+                  type="submit"
+                  ng-click="delete()"
+                  translate="DELETE">Delete</button>
+        </div>
       </div>
     </div>
   </div>
