chore(revert): partially revert commit related to CAM-3074

--- a/client/client/scripts/task/directives/cam-tasklist-task.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task.html
@@ -4,7 +4,7 @@
   {{ 'LOADING' | translate }}
 </div>
 
-<div ng-show="taskState.$loaded">
+<div ng-if="taskState.$loaded">
   <div ng-hide="task">
     <div class="no-task well">
       <i class="glyphicon glyphicon-info-sign"></i>
