fix(task): prevent duplicate requests on task selection
related to CAM-3074

--- a/client/client/scripts/form/directives/cam-tasklist-form-generic-variables.html
+++ b/client/client/scripts/form/directives/cam-tasklist-form-generic-variables.html
@@ -129,7 +129,7 @@
     </div>
   </div>
   <div class="form-group"
-       ng-if="canLoadVariables && !variablesLoaded">
+       ng-if="!options.hideLoadVariablesButton && !variablesLoaded">
     <div class="col-xs-2 row-action">
       <a ng-click="loadVariables()">
         <span class="hidden-sm hidden-xs"
