--- a/client/client/scripts/task/plugins/detail/cam-tasklist-task-detail-form-plugin.html
+++ b/client/client/scripts/task/plugins/detail/cam-tasklist-task-detail-form-plugin.html
@@ -1,12 +1,12 @@
 <div class="form-pane">
 
-  <div ng-show="taskFormState.$error" class="alert alert-danger" role="alert">
+  <div ng-if="taskFormState.$error" class="alert alert-danger" role="alert">
     <span class="glyphicon glyphicon-exclamation-sign"></span>
     <strong class="status">{{ 'FORM_FAILURE' | translate }}</strong>
     <span class="message">{{ taskFormState.$error.message }}</span>
   </div>
 
-  <div ng-hide="taskFormState.$error"
+  <div ng-if="taskFormState.$loaded && !taskFormState.$error"
        cam-tasklist-form
        tasklist-form="taskForm"
        on-form-completion-callback="completionCallback"
