--- a/client/client/scripts/form/directives/cam-tasklist-form-generic-variables.html
+++ b/client/client/scripts/form/directives/cam-tasklist-form-generic-variables.html
@@ -59,14 +59,14 @@
                  placeholder="{{ 'VARIABLE_NAME' | translate }}"
                  ng-model="variable.name"
                  name="name"
-                 cam-unique="{{ getVariableNames() }}"
+                 cam-unique-value="{{ getVariableNames() }}"
                  ng-readonly="variable.fixedName" />
           <span ng-if="repeatForm.name.$invalid && repeatForm.name.$dirty" class="has-error">
             <span ng-if="repeatForm.name.$error.required"
                   class="help-block">
               {{ 'REQUIRED_FIELD' | translate }}
             </span>
-            <span ng-if="repeatForm.name.$error.camUnique"
+            <span ng-if="repeatForm.name.$error.camUniqueValue"
                   class="help-block">
               {{ 'REQUIRE_UNIQUE_NAME' | translate }}
             </span>
