fix(task meta): correct too wide clickable groups link
Related to: CAM-3128

--- a/client/client/scripts/task/directives/cam-tasklist-task-meta.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task-meta.html
@@ -71,7 +71,7 @@
 
 <ul class="meta list-inline actors">
   <li class="groups">
-    <div ng-click="editGroups()">
+    <span ng-click="editGroups()">
       <span tooltip-placement="top"
             tooltip="{{ 'GROUPS' | translate }}"
             class="glyphicon glyphicon-th"></span>
@@ -84,7 +84,7 @@
          translate="ADD_GROUPS">
         Add groups
       </a>
-    </div>
+    </span>
   </li>
 
   <li class="assignee set-value"
