chore(plugins): replace plugin related variables in index file
related to CAM-3247

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -83,6 +83,12 @@
         </div>
       </footer>
     </div>
+
+    <script type="application/javascript">
+      window.PLUGIN_DEPENDENCIES = $PLUGIN_DEPENDENCIES || [];
+      window.PLUGIN_PACKAGES = $PLUGIN_PACKAGES || [];
+    </script>
+
     <script src="$APP_ROOT/app/admin/assets/vendor/better-dom/dist/better-dom.js"></script>
     <script src="$APP_ROOT/app/admin/assets/vendor/better-placeholder-polyfill/dist/better-placeholder-polyfill.js"></script>
   </body>
